fix modal close button alignament and size

--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ footer{
     }
     .close-btn {
         /* background: lightblue; */
-        max-width: 90%;
+        max-width: 85%;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
